syntax = "proto3";

option csharp_namespace = "Contracts.Protos";

import "google/protobuf/timestamp.proto";

package post;

service PostService {
  rpc AddPost (AddPostRequest) returns (PostResponse);
  rpc GetPostsByBlogId(GetPostsByBlogIdRequest) returns (PostsResponse);
}

message AddPostRequest {
  string title = 1;
  string content = 2;
  string blogId = 3;
}

message GetPostsByBlogIdRequest {
  string blogId = 1;
}

message PostResponse {
  string id = 1;
  string title = 2;
  string content = 3;
  google.protobuf.Timestamp publishedAt = 4;
  string blogId = 5;
} 

message PostsResponse {
  repeated PostResponse posts = 1;
}